Fix ios7 locked scrolling/flicker

--- a/src/less/glide.less
+++ b/src/less/glide.less
@@ -114,3 +114,8 @@ header, footer {
 .hidden {
   display: none;
 }
+
+// Adding box shadow fixes a scroll issues in ios7 Safari
+.previousPage {
+  box-shadow: inset 0px 0px 0px 0px black;
+}
